fix: fix the issue that post preview contents are too narrow

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -13,7 +13,6 @@
 
 	> .content {
 		bottom: 0;
-		display: block;
 		left: 0;
 		margin: 0;
 		position: absolute;
